--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,3 +15,7 @@ workflows:
   say-hello-workflow:
     jobs:
       - build
+        filters:
+            branches:
+              only:
+                - main
